--- a/01 - JavaScript Drum Kit/style.css
+++ b/01 - JavaScript Drum Kit/style.css
@@ -49,3 +49,10 @@ kbd {
   letter-spacing: .1rem;
   color: #ffc600;
 }
+
+.control-key{
+  position: absolute;
+  top: 70%;
+  width: 15%;
+  transform: translateY(-5%);
+}
